fix: navigation spacing issue

--- a/Components/navigation/navigation.css
+++ b/Components/navigation/navigation.css
@@ -1,10 +1,17 @@
 .navbar-simple{
     display: flex;
+    width: 90%;
     flex-wrap: wrap;
     border: 1px solid black;
     justify-content: space-between;
     align-items: center;
     padding: 0.7rem;
+}
+
+.icon-holder{
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
 }
 
 .nav-heading{
